// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box Box renders correctly  1`] = `
<DocumentFragment>
  <div
    class="cache-11djngs e7ah3bn0"
  />
</DocumentFragment>
`;

exports[`Box Box renders with as property 1`] = `
<DocumentFragment>
  .cache-of7ya {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
}

<p
    class="cache-of7ya e7ah3bn0"
  />
</DocumentFragment>
`;

exports[`Box Box renders with bordered 1`] = `
<DocumentFragment>
  .cache-of7ya {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
}

<div
    class="cache-of7ya e7ah3bn0"
  />
</DocumentFragment>
`;

exports[`Box Box renders with system 1`] = `
<DocumentFragment>
  .cache-sf4awt.cache-sf4awt {
  height: 100px;
  margin-right: auto;
  margin-left: auto;
  padding: 16px;
}

<div
    class="cache-sf4awt e7ah3bn0"
  />
</DocumentFragment>
`;
